Bug 277167 - Using transparent background paste option does not work
Summary: Using transparent background paste option does not work
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
: 287758 289002 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-05 23:47 UTC by Kai Uwe Broulik
Modified: 2011-12-15 11:17 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-07-05 23:47:30 UTC
Version:           unspecified (using Devel) 
OS:                Linux

When writing text, you have the option to write on a solid color or transparent (i. e. blend in with the background). This option does no longer work, however. To achieve the same effect, you need to chose the transparent color as your secondary color.

Also pasting while using the transparent paste mode does not work, it seems only the white colored parts survive the rest doesnt get pasted (already visible while still dragging the pasted selection)

Reproducible: Always

Steps to Reproduce:
.


Expected Results:  
.
Comment 1 Martin Koller 2011-07-10 15:17:47 UTC
I can not reproduce your problem with the transparent text background.
Neither with KDE 4.6 nor with 4.7

The copy/paste in transparent mode copies all but the part which has the current background color.

Which version are you using ?
Comment 2 Kai Uwe Broulik 2011-07-10 17:27:57 UTC
I regularily compile it from trunk.
Comment 3 ralph 2011-08-11 22:07:12 UTC
I can confirm a similar problem.

OpenSuse 11.4
KDE 4.7 final
nVidia GeForce GT 320M (nVidia driver)

Transparent selection does not work in KolourPaint 4.7
Dragging the selected area, also the (solid) background is dragged.
No problem with KolourPaint 4.6.x.

I think it's a problem with the new alpha channel support.
Perhaps, this new feature works differently depending on the model of the video card/video driver.
Comment 4 WiseLord 2011-09-14 19:24:15 UTC
I have a similar problem with transparency in KDE.
I tried some versions of kolourpaint and it seems that problem presents from 4.7.0 to last git version. There is no problem in 4.6.x

I made a little screencast for this bug: http://www.youtube.com/watch?v=XCin5iTAXgE
Comment 5 Jimage 2011-10-03 03:14:49 UTC
Same problem here. Running Arch Linux, KDE/Kolourpaint 4.7.0. Moved/pasted content that's supposed to be opaque is turning up transparent and vice versa. This makes it completely unusable for certain purposes.
Comment 6 Jimage 2011-10-03 03:30:37 UTC
Actually 4.7.1-1.
On another computer, 4.6.5-2 is working fine.
Comment 7 Christoph Feck 2011-10-12 22:31:09 UTC
See also bug 283866, which requests this "feature" (reverse selection) be kept as a separate tool/option. Stencils to the rescue :)
Comment 8 ralph 2011-11-14 22:39:35 UTC
Is it so difficult to fix this bug?

KColourPaint is a very useful application; it is a pity that this bugs makes it unusable.
Comment 9 Simplex 2011-11-17 13:56:49 UTC
Same bug here (xubuntu 11.10) - hope this gest fixed soon, this bug is severely impacting my productivity!
Comment 10 Martin Koller 2011-11-17 19:41:08 UTC
ok, I see the problem.
I hope it's not so difficult to fix, but it's difficult to find the time to do it ;-)
Comment 11 Martin Koller 2011-11-18 21:39:46 UTC
Git commit 9dcdf83f8c866d59fb373744755c6403a14ec63a by Martin Koller.
Committed on 18/11/2011 at 22:36.
Pushed by mkoller into branch 'KDE/4.7'.

make transparent copy/paste and transparent text writing work again

BUG: 277167

M  +2    -2    layers/selections/image/kpAbstractImageSelection.cpp
M  +6    -4    layers/selections/text/kpTextSelection_Paint.cpp

http://commits.kde.org/kolourpaint/9dcdf83f8c866d59fb373744755c6403a14ec63a
Comment 12 Martin Koller 2011-11-18 21:45:34 UTC
Git commit 8ef77ee44588e8aebb065b71bbf0b3be0d083932 by Martin Koller.
Committed on 18/11/2011 at 22:36.
Pushed by mkoller into branch 'master'.

make transparent copy/paste and transparent text writing work again

BUG: 277167

M  +2    -2    layers/selections/image/kpAbstractImageSelection.cpp
M  +6    -4    layers/selections/text/kpTextSelection_Paint.cpp

http://commits.kde.org/kolourpaint/8ef77ee44588e8aebb065b71bbf0b3be0d083932
Comment 13 Simplex 2011-11-28 12:21:05 UTC
Great news, when will it be included in the version that can be automatically downloaded through Ubuntu Update Manager?
Comment 14 Kai Uwe Broulik 2011-11-28 13:40:02 UTC
@Simplex:
sudo apt-get build-dep kolourpaint
git clone git://anongit.kde.org/kolourpaint
cd kolourpaint
mkdir build
cd build
cmake .. -DCMAKE_INSTALL_PREFIX=/usr
make
sudo make install

Et voila! :)
Comment 15 Martin Koller 2011-11-28 13:45:23 UTC
On Monday, 28. November 2011 13:21:06 Simplex wrote:
> --- Comment #13 from Simplex <simplex g pl>  2011-11-28 12:21:05 ---
> Great news, when will it be included in the version that can be automatically
> downloaded through Ubuntu Update Manager?

No idea about Ubuntu. I fixed it in master (KDE 4.8 release) and in the 4.7 branch,
which means it'll be in the next KDE 4.7.4 release, too.
Comment 16 Andreas Nordal 2011-11-29 14:09:46 UTC
*** Bug 287758 has been marked as a duplicate of this bug. ***
Comment 17 ralph 2011-12-10 23:29:23 UTC
Fixed in KDE 4.7.4!
Comment 18 Martin Koller 2011-12-15 05:04:40 UTC
*** Bug 289002 has been marked as a duplicate of this bug. ***
Comment 19 Andreas Nordal 2011-12-15 11:17:47 UTC
*** Bug 287758 has been marked as a duplicate of this bug. ***