make transparent copy/paste and transparent text writing work again

BUG: 277167